<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HenQueen2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">test</string>
    <string name="tests">tests</string>
    <string name="title_activity_play_screenctivity">PlayScreenctivity</string>
    <string name="title_activity_score_screen">ScoreScreenActivity</string>
    <string name="score">score</string>
    <string name="score1">score1</string>
    <string name="scorevalue">scorevalue</string>
    <string name="playagain">playagain</string>
    <string name="home">home</string>
    <string name="henqueen">henqueen</string>
    <string name="scorevalue1">scorevalue1</string>
    <string name="scorevalue2">scorevalue2</string>

</resources>