<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView 
        android:id="@+id/scoreimgBackground"
        android:src="@drawable/scorebackgroundimg"
        android:adjustViewBounds="true"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/score" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >   
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:orientation="vertical" >

             <ImageButton
                 android:id="@+id/homeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:clickable="true"
                 android:contentDescription="@string/home"
                 android:src="@drawable/imghome" />

             <ImageButton
                 android:id="@+id/playAgainButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:contentDescription="@string/playagain"
                 android:src="@drawable/imgplayagain" />
       
        </LinearLayout>
  <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_gravity="center" >   
  <ImageView
            android:id="@+id/imgScoreValue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:contentDescription="@string/scorevalue"
            android:scaleType="center"
          
            />
  <ImageView
            android:id="@+id/imgScoreValue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:contentDescription="@string/scorevalue1"
            android:scaleType="center"
          
            />
  <ImageView
            android:id="@+id/imgScoreValue3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:contentDescription="@string/scorevalue2"
            android:scaleType="center"
          
            />
  </LinearLayout>
        <ImageView
            android:id="@+id/imgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@string/score1"
            android:scaleType="center"
            android:src="@drawable/scorebutton" />
         
    </LinearLayout>
             
</FrameLayout>
